# yast-slepos-system-manager

./: MAINTAINER  RPMNAME  yast2-slepos-system-manager.spec.in
agents/: Makefile.am  cfg_slepos_system_manager.scr
doc/: Makefile.am
doc/autodocs/: Makefile.am
package/: yast2-slepos-system-manager.changes
src/: Makefile.am  SleposSystemManager.ycp  SleposUtils.ycp  SleposValidators.ycp  complex.ycp  dialogs.ycp  helps.ycp  routines.ycp  slepos-system-manager.desktop  slepos-system-manager.ycp  subdialogs.ycp  subwizards.ycp  uifunctions.ycp  wizards.ycp
testsuite/tests/: GetDomainName.out  GetDomainName.ycp
